--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ migrate_working_dir/
 .packages
 .pub-cache/
 .pub/
-
+.dart_tool/
 
 # Symbolication related
 app.*.symbols
@@ -41,3 +41,4 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+build/
